--- a/index.toml
+++ b/index.toml
@@ -495,6 +495,10 @@ file = "mods/testing/surveyor.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/testing/table-top-craft.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/tweaks/audio/dynamicsurroundingsfabric.pw.toml"
 metafile = true
 
