--- a/mods/tweaks/hud/jade.pw.toml
+++ b/mods/tweaks/hud/jade.pw.toml
@@ -1,13 +1,13 @@
 name = "Jade 🔍"
-filename = "Jade-1.20-fabric-11.11.0.jar"
+filename = "Jade-1.20-Fabric-11.12.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/nvQzSEkH/versions/bwDoSE9Z/Jade-1.20-fabric-11.11.0.jar"
+url = "https://cdn.modrinth.com/data/nvQzSEkH/versions/Lvyx1o7I/Jade-1.20-Fabric-11.12.0.jar"
 hash-format = "sha1"
-hash = "a2980804c7d3570c6e799b2e3760d27be783bdf7"
+hash = "a963ffed9599badbec94fdd1341bdddff228ba95"
 
 [update]
 [update.modrinth]
 mod-id = "nvQzSEkH"
-version = "bwDoSE9Z"
+version = "Lvyx1o7I"
