--- a/mods/libraries/fzzy-config.pw.toml
+++ b/mods/libraries/fzzy-config.pw.toml
@@ -1,13 +1,13 @@
 name = "Fzzy Config"
-filename = "fzzy_config-0.5.0+1.20.1.jar"
+filename = "fzzy_config-0.5.3+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/hYykXjDp/versions/MgrfHpyF/fzzy_config-0.5.0%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/hYykXjDp/versions/LWJeHGaR/fzzy_config-0.5.3%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "765367098492c510aceadcb082e762ea56236c0e"
+hash = "ba8ee7d21b5c6a36a4456338bd4d3c72b4b741f4"
 
 [update]
 [update.modrinth]
 mod-id = "hYykXjDp"
-version = "MgrfHpyF"
+version = "LWJeHGaR"
