--- a/mods/libraries/puzzles-lib.pw.toml
+++ b/mods/libraries/puzzles-lib.pw.toml
@@ -1,13 +1,13 @@
 name = "Puzzles Lib"
-filename = "PuzzlesLib-v8.1.23-1.20.1-Fabric.jar"
+filename = "PuzzlesLib-v8.1.24-1.20.1-Fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/QAGBst4M/versions/wTaZZcm5/PuzzlesLib-v8.1.23-1.20.1-Fabric.jar"
+url = "https://cdn.modrinth.com/data/QAGBst4M/versions/LT6tSsY5/PuzzlesLib-v8.1.24-1.20.1-Fabric.jar"
 hash-format = "sha1"
-hash = "89dc5e19d037f5a5e6d8a6b92353130294c8ea7b"
+hash = "c630ec1c8967bcb5ea3362c8b01f7b8685be0847"
 
 [update]
 [update.modrinth]
 mod-id = "QAGBst4M"
-version = "wTaZZcm5"
+version = "LT6tSsY5"
