--- a/mods/libraries/yungs-api.pw.toml
+++ b/mods/libraries/yungs-api.pw.toml
@@ -1,13 +1,13 @@
 name = "YUNG's API"
-filename = "YungsApi-1.20-Fabric-4.0.5.jar"
+filename = "YungsApi-1.20-Fabric-4.0.6.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Ua7DFN59/versions/zPT7QfIk/YungsApi-1.20-Fabric-4.0.5.jar"
+url = "https://cdn.modrinth.com/data/Ua7DFN59/versions/lscV1N5k/YungsApi-1.20-Fabric-4.0.6.jar"
 hash-format = "sha1"
-hash = "9aa99d06657779322767aafd10b9a44eed2690b6"
+hash = "8d39c739b534e7351e9fdabf045f171a4e45c98a"
 
 [update]
 [update.modrinth]
 mod-id = "Ua7DFN59"
-version = "zPT7QfIk"
+version = "lscV1N5k"
