--- a/mods/tweaks/menu/fancymenu.pw.toml
+++ b/mods/tweaks/menu/fancymenu.pw.toml
@@ -1,13 +1,13 @@
 name = "FancyMenu"
-filename = "fancymenu_fabric_3.2.3_MC_1.20.1.jar"
+filename = "fancymenu_fabric_3.3.0_MC_1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Wq5SjeWM/versions/3dDslDXq/fancymenu_fabric_3.2.3_MC_1.20.1.jar"
+url = "https://cdn.modrinth.com/data/Wq5SjeWM/versions/6fWalRGW/fancymenu_fabric_3.3.0_MC_1.20.1.jar"
 hash-format = "sha1"
-hash = "ac5c44bd127ce01040db73e234ae73fa7ed3fbfb"
+hash = "39455bd82465f6f27ecd0d226589ae5823ae0d40"
 
 [update]
 [update.modrinth]
 mod-id = "Wq5SjeWM"
-version = "3dDslDXq"
+version = "6fWalRGW"
